K8S/mssql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  selector:
    matchLabels:
      app: mssql-server
  template:
    metadata:
      labels:
        app: mssql-server
    spec:
      containers:
      - name: mssql-server
        image: mcr.microsoft.com/mssql/server:2017-latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 1433
        volumeMounts:
        - mountPath: /var/opt/mssql/data
          name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: sqlserver-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: mssql-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: mssql-server
  ports:
  - name: mssql-server
    protocol: TCP
    port: 1433
    targetPort: 1433

---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: mssql-server
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
