K8S/platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platforms-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platformservice
  template:
    metadata:
      labels:
        app: platformservice
    spec:
      containers:
      - name: platformservice
        image: rohitrustagi007/platformservice:14
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"


---
apiVersion: v1
kind: Service
metadata:
  name: platform-cluster-ip
spec:
  type: ClusterIP
  selector:
    app: platformservice
  ports:
  - name: platformservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: platformgrpc
    protocol: TCP
    port: 666
    targetPort: 666
