K8S/ingress-nginx-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-srv
  annotations: 
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/use-regex: 'true'
  labels:
    name: myingress  
spec:
  rules:
  - host: acme.com
    http:
      paths:
      - path: /api/platforms
        pathType: Prefix
        backend:
          service:
            name: platform-cluster-ip
            port: 
              number: 80
      - path: /api/c/platforms/test
        pathType: Prefix
        backend:
          service:
            name: command-cluster-ip
            port: 
              number: 80
